# GameOfLife

./: .gitignore  CMakeLists.txt  CPU.cpp  GOL.cl  GPU.cpp  GameOfLife.cpp  GameOfLife.hpp  helper.hpp
